--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,19 @@ ul {
 }
 
 li {
-	padding: 10px;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid rgba(63, 55, 201, 0.3);;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+}
+
+ul li span {
+	padding: 10px;
+	width: 100%;
+	margin-right: 20px;
+	cursor: pointer;
 }
 
 body {
@@ -31,16 +39,22 @@ h1 {
 	text-align: center;
 }
 
+h2 {
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
 .container {
 	max-width: 1124px;
 	margin: 0 auto;
 }
 
-.inputTask {
+.taskInput {
 	margin-right: 40px;
 	padding: 12px 16px;
 	border-radius: 10px;
 	border: 1px solid #3F37C9;
+	width: 305px;
 }
 
 .inputTask:focus {
@@ -74,3 +88,7 @@ h1 {
 	margin-bottom: 20px;
 }
 
+.completed {
+ text-decoration: line-through;
+ color: green;
+}
